2017-03-03  ------ omnetpp-5.1 released ------

2017-03-02  Andras Varga

	* envir: SectionBasedConfig: fix bug in unrollConfig()
	When doing "-q runs", seed-set=${10,20,30} causes assertion failure near
	sectionbasedconfig.cc:650

2017-02-23  Andras Varga

	* envir: fix #995: Assert condition fails for ini files with CRLF line
	terminators in inifilereader

2017-02-06  ------ omnetpp-5.1pre3 released ------

2017-01-06  Andras Varga

	* Command line: '-h' to respect 'verbose' flag; added '-h configvars'

2017-01-02  Andras Varga

	* Command line: fix "-h figures" (take the list from the place
	Register_Figure() stores it)

2016-12-23  ------ omnetpp-5.1pre2 released ------

2016-12-19  Andras Varga

	* cpu-time-limit option: do not truncate to whole seconds; measure really
	CPU usage and not elapsed time (use clock() instead of gettimeofday())

	* Added real-time-limit option that measures elapsed time (gettimeofday)

	* Time limit checking frequency changed from every 256 events to every
	1024 events.

	* Factored out time limit handling into a Stopwatch class.

2016-12-16  Andras Varga

	* scalar file recording: change "." to "_runattrs_" as the module
	name used for run attributes saved as scalars

2016-11-30  Rudolf Hornig

	* build: Makefile refactored. Added clang-c2 support and optimized
	the build process.

	* build: removed Makefile.vc, as Visual C++ builds are now handled
	by the standard Makefiles.

2016-12-06  Andras Varga

	* build: Added support for the PREFER_SQLITE_RESULT_FILES macro

2016-11-24  Andras Varga

	* OMNeT++ result file recorders: refactoring, small improvements

2016-11-25  Andras Varga

	* Revised SQLite-related code: configuration options, error handling,
	internal logic, refactoring, etc.

	To switch to SQLite-based result files, add the following to your omnetpp.ini:

	outputscalarmanager-class = "omnetpp::envir::SqliteOutputScalarManager"
	outputvectormanager-class = "omnetpp::envir::SqliteOutputVectorManager"
